# wowsim

./: .gitignore  README.md  pyproject.toml
examples/: _example_imports.py  arcane_bracer_test.py  arcane_haste_weights_test.py  arcane_racial_test.py  arcane_ring_test.py  arcane_trinket_test.py  arcane_trinket_test2.py  arcane_trinket_test3.py  arcane_trinket_test4.py  arcane_weights_test.py  arcane_weights_test_fresh.py  arcane_weights_test_haste.py  bis_mage_test.py  boomkin_trinket_test.py  boomkin_weights_test.py  cooldowns.py  fire_trinket_test.py  fire_weights_test.py  frost_trinket_test.py  frost_weights_test.py  loatheb.py  lock_weights_test.py  locks_and_mages.py  mptest.py  multi_arcane_and_fire_mage_test.py  multi_arcane_mage_test.py  multi_arcane_mage_test2.py  multi_arcane_mage_test3.py  multi_arcane_mage_test4.py  multi_arcane_mage_test5.py  multi_boomkin_test.py  multi_fire_mage_test.py  multi_fire_mage_test2.py  multi_fire_mage_test3.py  multi_fire_mage_test_flamestrike.py  multi_frost_mage_test.py  multi_frost_mage_test2.py  multi_mage_test.py  num_lock_test.py  simulation.py  (+8 more)
sim/: __init__.py  arcane_dots.py  character.py  cooldown_usages.py  cooldowns.py  debuffs.py  decorators.py  dot.py  druid.py  druid_options.py  druid_rotation_cooldowns.py  druid_talents.py  env.py  equipped_items.py  fire_dots.py  hot_streak.py  ignite.py  improved_shadow_bolt.py  item_proc_handler.py  item_procs.py  mage.py  mage_options.py  mage_rotation_cooldowns.py  mage_talents.py  nature_dots.py  shadow_dots.py  simulation.py  simulation_multi.py  spell.py  spell_school.py  (+5 more)
(+7 files in other folders)
